fix: the categoryBar style on mobile

--- a/source/css/_custom/categoryBar/categoryBar.css
+++ b/source/css/_custom/categoryBar/categoryBar.css
@@ -82,12 +82,4 @@
   [data-theme="dark"] #category-bar.category-bar {
     background: var(--anzhiyu-black);
   }
-  #category-bar.category-bar:hover {
-    border: none;
-    box-shadow: none;
-  }
-  #category-bar {
-    border: none;
-    border-radius: 0px;
-  }
 }
